WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
39918
REGRESSION(58615): Scroll events are sent twice per keypress for ports that don't have a platformWidget scrollbar
https://bugs.webkit.org/show_bug.cgi?id=39918
Summary
REGRESSION(58615): Scroll events are sent twice per keypress for ports that d...
Nico Weber
Reported
2010-05-28 17:31:49 PDT
Scroll events are sent twice per keypress for ports that don't have a platformWidget scrollbar
Attachments
Patch
(6.06 KB, patch)
2010-05-28 17:33 PDT
,
Nico Weber
no flags
Details
Formatted Diff
Diff
Patch
(6.06 KB, patch)
2010-05-28 18:11 PDT
,
Nico Weber
no flags
Details
Formatted Diff
Diff
Patch
(6.08 KB, patch)
2010-06-02 11:39 PDT
,
Nico Weber
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Nico Weber
Comment 1
2010-05-28 17:33:59 PDT
Created
attachment 57397
[details]
Patch
Nico Weber
Comment 2
2010-05-28 17:53:23 PDT
+Simon, who merged the regressing patch into qtwebkit-2.0.
James Robinson
Comment 3
2010-05-28 17:59:14 PDT
This patch looks right, I missed this side effect in
http://trac.webkit.org/changeset/58615
.
Early Warning System Bot
Comment 4
2010-05-28 18:04:52 PDT
Attachment 57397
[details]
did not build on qt: Build output:
http://webkit-commit-queue.appspot.com/results/2632055
Nico Weber
Comment 5
2010-05-28 18:11:38 PDT
Created
attachment 57399
[details]
Patch
Nico Weber
Comment 6
2010-05-28 19:02:20 PDT
This is
http://crbug.com/43958
btw.
Simon Fraser (smfr)
Comment 7
2010-06-02 11:32:16 PDT
Comment on
attachment 57399
[details]
Patch
> + void scrollPositionChanged(); > + virtual void repaintFixedElementsPostScroll();
We don't use the term "postScroll" anywhere else, but we do use "afterScrolling", so I suggest you change the method name to use that.
Nico Weber
Comment 8
2010-06-02 11:39:09 PDT
Created
attachment 57673
[details]
Patch
Nico Weber
Comment 9
2010-06-02 11:40:57 PDT
Comment on
attachment 57673
[details]
Patch Earlier patch got r+ from smfr as can be seen here:
https://bugs.webkit.org/show_activity.cgi?id=39918
Looks like webkit-patch clobbered that information.
WebKit Commit Bot
Comment 10
2010-06-02 19:10:36 PDT
Comment on
attachment 57673
[details]
Patch Clearing flags on attachment: 57673 Committed
r60591
: <
http://trac.webkit.org/changeset/60591
>
WebKit Commit Bot
Comment 11
2010-06-02 19:10:43 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 12
2010-06-02 19:38:30 PDT
http://trac.webkit.org/changeset/60591
might have broken Qt Linux Release
Simon Hausmann
Comment 13
2010-06-04 00:33:16 PDT
Revision
r60591
cherry-picked into qtwebkit-2.0 with commit 7d41434425ce9c42e0fbb3640b13ee0669c9b6c7
Csaba Osztrogonác
Comment 14
2010-06-05 01:42:07 PDT
(In reply to
comment #13
)
> Revision
r60591
cherry-picked into qtwebkit-2.0 with commit 7d41434425ce9c42e0fbb3640b13ee0669c9b6c7
editing/input/page-up-down-scrolls.html fails with QtWebKit, and is on Skipped list, see
https://bugs.webkit.org/show_bug.cgi?id=40102
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug