2010-06-02  Nico Weber  <thakis@chromium.org>

Reviewed by Simon Fraser.

        Scroll events are sent twice per keypress for ports that don't have a platformWidget scrollbar.

        This was regressed by http://trac.webkit.org/changeset/58615 . Fix this by slightly tweaking
        that patch, add a layout test.

        https://bugs.webkit.org/show_bug.cgi?id=39918

        * editing/input/page-up-down-scrolls-expected.txt: Added.
        * editing/input/page-up-down-scrolls.html: Added.
2010-06-02  Nico Weber  <thakis@chromium.org>

        Reviewed by Simon Fraser.

        Scroll events are sent twice per keypress for ports that don't have a platformWidget scrollbar
        https://bugs.webkit.org/show_bug.cgi?id=39918

        This was regressed by http://trac.webkit.org/changeset/58615 . Fix this by slightly tweaking
        that patch.

        Test: editing/input/page-up-down-scrolls.html

        * page/FrameView.cpp:
        (WebCore::FrameView::scrollPositionChanged):
        * page/FrameView.h:
        * platform/ScrollView.cpp:
        (WebCore::ScrollView::valueChanged):
        * platform/ScrollView.h:
        (WebCore::ScrollView::repaintFixedElementsAfterScrolling):

Canonical link: https://commits.webkit.org/51621@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60591 268f45cc-cd09-0410-ab3c-d52691b4dbfc