WebCore/page/FrameView.h
@@ -143,7 +143,8 @@ public:
     virtual IntRect windowResizerRect() const;
 
     void setScrollPosition(const IntPoint&);
-    virtual void scrollPositionChanged();
+    void scrollPositionChanged();
+    virtual void repaintFixedElementsAfterScrolling();
 
     String mediaType() const;
     void setMediaType(const String&);
